[package]
name = "metriport-rust"
version = "0.1.0"
description = "This is a rust SDK for the metriport API"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_derive = "1.0.193"
tokio = "1"
